cluster/mediaserver/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: 6.4.4.10685-ls317
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app.kubernetes.io/version: 6.4.4.10685-ls317
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 10.43.0.53
        searches:
        - jellyfin.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      containers:
      - image: linuxserver/radarr:6.4.4.10685-ls317@sha256:c960f2b52ec6542dbe6707c5a21e696a7c74fd8b17997454f4d10a55dacee133
        name: radarr
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: media
        resources:
          requests:
            cpu: 50m
            memory: 192Mi
          limits:
            cpu: "1"
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ping
            port: 7878
          periodSeconds: 30
        startupProbe:
          httpGet:
            path: /ping
            port: 7878
          periodSeconds: 10
          failureThreshold: 60
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-pvc
