cluster/mediaserver/radarr/arr-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr-arr-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - sonarr
          - lidarr
          - prowlarr
          - bazarr
          - seerr
          - stall-watch
    ports:
    - port: 7878
      protocol: TCP
